@@ -53,7 +53,7 @@ static int _sort_controllers(void *x, void *y)
 	ctl_entry_t *ctl1 = *(ctl_entry_t **) x;
 	ctl_entry_t *ctl2 = *(ctl_entry_t **) y;
 
-	return slurm_sort_uint_list_asc(&ctl1->priority, &ctl2->priority);
+	return slurm_sort_uint16_list_asc(&ctl1->priority, &ctl2->priority);
 }
 
 extern List resolve_ctls_from_dns_srv(void)
